--- a/index.html
+++ b/index.html
@@ -1,16 +1,77 @@
-<!DOCTYPE html>
 <html>
 <head>
-  <title>AI Talks Back - Support</title>
+	<title>AI Talks Back Support</title>
+	<style>
+		body {
+			font-family: Arial, sans-serif;
+			color: #333;
+			background-color: #f2f2f2;
+		}
+		h1 {
+			font-size: 36px;
+			color: #0085ff;
+			text-align: center;
+			margin: 30px 0;
+		}
+		.support-container {
+			max-width: 800px;
+			margin: 0 auto;
+			padding: 20px;
+			text-align: center;
+		}
+		.support-options {
+			display: flex;
+			justify-content: space-around;
+			margin-top: 30px;
+		}
+		.support-option {
+			width: 300px;
+			padding: 20px;
+			border: 1px solid #ccc;
+			border-radius: 5px;
+			background-color: #fff;
+			text-align: center;
+			cursor: pointer;
+			transition: all 0.2s ease-in-out;
+		}
+		.support-option:hover {
+			box-shadow: 0 0 10px rgba(0,0,0,0.1);
+			transform: scale(1.05);
+		}
+		.support-option h2 {
+			font-size: 24px;
+			color: #0085ff;
+			margin-bottom: 15px;
+		}
+		.support-option p {
+			font-size: 16px;
+			line-height: 1.5;
+		}
+		.support-option .fa {
+			font-size: 48px;
+			color: #0085ff;
+			margin-bottom: 15px;
+		}
+	</style>
 </head>
 <body>
-  <h1>AI Talks Back - Support</h1>
-  <p>Welcome to the support page for AI Talks Back, the iPhone app that lets you have conversations with artificial intelligence.</p>
-  <h2>Contact Developer</h2>
-  <p>If you have any questions or need assistance with the app, you can contact the developer through the following channels:</p>
-  <ul>
-    <li><a href="https://twitter.com/developerhandle">Twitter</a></li>
-    <li><a href="mailto:developer@email.com">Email</a></li>
-  </ul>
+	<h1>Welcome to AI Talks Back Support</h1>
+	<div class="support-container">
+		<p>Thank you for using AI Talks Back! If you have any questions or issues with the app, please don't hesitate to reach out to us for support. Here are a few options for getting in touch with us:</p>
+		<div class="support-options">
+			<div class="support-option" onclick="window.open('https://twitter.com/shi_hongyi')">
+				<i class="fa fa-twitter"></i>
+				<h2>Twitter</h2>
+				<p>Send us a tweet at our developer handle for quick support and updates on the app.</p>
+			</div>
+			<div class="support-option" onclick="window.open('mailto:shihongyi88@gmail.com')">
+				<i class="fa fa-envelope"></i>
+				<h2>Email</h2>
+        <p>For more in-depth support inquiries, send us an email at shihongyi88@gmail.com and we'll get back to you as soon as possible.</p>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
+
+
